--- a/package.json
+++ b/package.json
@@ -2,19 +2,29 @@
   "name": "run-exe",
   "version": "1.0.0",
   "description": "An .exe Runner for Visual Studio Code.",
-  "main": "index.js",
+  "main": "./out/extension.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "lint": "prettier --check .",
+    "lint:fix": "prettier --write .",
+    "watch": "tsc -watch -p ./"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Harry-Hopkinson/run-exe.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "exe",
+    "executable"
+  ],
+  "author": "Harry-Hopkinson",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Harry-Hopkinson/run-exe/issues"
   },
-  "homepage": "https://github.com/Harry-Hopkinson/run-exe#readme"
+  "homepage": "https://github.com/Harry-Hopkinson/run-exe#readme",
+  "devDependencies": {
+    "prettier": "^2.8.4"
+  }
 }
