--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "run-exe",
   "version": "1.0.0",
+  "engines": {
+    "vscode": "^1.14.0"
+  },
+  "activationEvents": [
+    "run-exe.run"
+  ],
   "description": "An .exe Runner for Visual Studio Code.",
   "main": "./out/extension.js",
   "scripts": {
@@ -25,6 +31,60 @@
   },
   "homepage": "https://github.com/Harry-Hopkinson/run-exe#readme",
   "devDependencies": {
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@types/node": "^12.12.69",
+    "@types/vscode": "^1.14.0",
+    "vscode": "^1.1.34"
+  },
+  "contributes": {
+    "commands": [
+      {
+        "command": "run-exe.run",
+        "title": "Run Executable",
+        "icon": {
+          "light": "media/light.svg",
+          "dark": "media/dark.svg"
+        }
+      }
+    ],
+    "menus": {
+      "commandPalette": [
+        {
+          "command": "run-exe.run",
+          "when": "resourceExtname == .exe"
+        }
+      ],
+      "editor/title": [
+        {
+          "command": "run-exe.run",
+          "group": "navigation",
+          "when": "resourceExtname == .exe"
+        }
+      ],
+      "editor/title/context": [
+        {
+          "command": "run-exe.run",
+          "group": "navigation",
+          "when": "resourceExtname == .exe"
+        }
+      ],
+      "explorer/context": [
+        {
+          "command": "run-exe.run",
+          "group": "navigation",
+          "when": "resourceExtname == .exe"
+        }
+      ],
+      "editor/context": [
+        {
+          "command": "run-exe.run",
+          "group": "navigation",
+          "when": "resourceExtname == .exe"
+        }
+      ]
+    }
   }
 }
