--- a/.github/workflows/Linter.yml
+++ b/.github/workflows/Linter.yml
@@ -16,9 +16,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Yarn 🧶
+      - name: NPM
         run: |
           npm install --save-dev prettier
-      - name: Typescript Linting ✏️
+      - name: Code Formatter
         run: |
           npm run lint
