--- a/package.json
+++ b/package.json
@@ -31,13 +31,11 @@
   },
   "homepage": "https://github.com/Harry-Hopkinson/run-exe#readme",
   "devDependencies": {
-    "prettier": "^2.8.4",
-    "typescript": "^4.9.5"
-  },
-  "dependencies": {
     "@types/node": "^12.12.69",
     "@types/vscode": "^1.14.0",
-    "vscode": "^1.1.34"
+    "vscode": "^1.1.34",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5"
   },
   "contributes": {
     "commands": [
