--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
   },
   "homepage": "https://github.com/Harry-Hopkinson/run-exe#readme",
   "devDependencies": {
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.14.2",
     "@types/vscode": "^1.14.0",
-    "vscode": "^1.1.34",
     "prettier": "^2.8.4",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vscode": "^1.1.34"
   },
   "contributes": {
     "commands": [
