--- a/.github/workflows/Linter.yml
+++ b/.github/workflows/Linter.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14, 15, 16]
+        node-version: [16]
 
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
