--- a/package.json
+++ b/package.json
@@ -33,11 +33,10 @@
   },
   "homepage": "https://github.com/Harry-Hopkinson/run-exe#readme",
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/node": "^22.5.4",
     "@types/vscode": "^1.14.0",
     "prettier": "^2.8.4",
-    "typescript": "^5.0.0",
-    "vscode": "^1.1.34"
+    "typescript": "^5.0.0"
   },
   "contributes": {
     "commands": [
