--- a/.github/workflows/Linter.yml
+++ b/.github/workflows/Linter.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
       - name: Yarn
         run: |
-          yarn add --dev prettier
+          yarn install
       - name: Code Formatter
         run: |
           yarn lint
